--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,14 @@
   --font-poppins: var(--font-poppins)
 }
 
+@layer utilities {
+  input:-webkit-autofill {
+    background-color: transparent !important;
+    color: inherit !important;
+    box-shadow: 0 0 0px 1000px white inset !important;
+  }
+}
+
 @utility container {
   margin-inline: auto;
   padding-inline: 2rem;
@@ -51,7 +59,11 @@
   @media (width >=1320px) {
     max-width: 1320px;
   }
+  @media (width >=1536px) {
+    max-width: 1536px;
+  }
 }
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -168,7 +180,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground font-poppins;
   }
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;}
+  body {
+    @apply bg-background text-foreground;}}
